Удален класс LoadMetaData.java. Добавлены методы отображения popup в IEntityLoader