@@ -1,31 +1,33 @@
 package ru.hzerr.fx.engine.core.entity;
 
 import com.google.common.util.concurrent.ThreadFactoryBuilder;
+import javafx.application.Platform;
 import javafx.fxml.FXMLLoader;
 import javafx.scene.Parent;
 import org.jetbrains.annotations.NotNull;
 import ru.hzerr.fx.engine.configuration.application.IClassLoaderProvider;
 import ru.hzerr.fx.engine.configuration.application.IResourceStructureConfiguration;
 import ru.hzerr.fx.engine.core.FXEngine;
-import ru.hzerr.fx.engine.core.annotation.*;
+import ru.hzerr.fx.engine.core.annotation.FXController;
+import ru.hzerr.fx.engine.core.annotation.FXEntity;
+import ru.hzerr.fx.engine.core.annotation.Include;
+import ru.hzerr.fx.engine.core.annotation.Registered;
 import ru.hzerr.fx.engine.core.annotation.as.EngineLogProvider;
 import ru.hzerr.fx.engine.core.concurrent.ExtendedCompletableFuture;
 import ru.hzerr.fx.engine.core.concurrent.IExtendedCompletionStage;
-import ru.hzerr.fx.engine.core.entity.exception.*;
+import ru.hzerr.fx.engine.core.entity.exception.BeanControllerNotFoundException;
+import ru.hzerr.fx.engine.core.entity.exception.FXMLNotFoundException;
+import ru.hzerr.fx.engine.core.entity.exception.LoadControllerException;
 import ru.hzerr.fx.engine.core.path.resolver.EntityLocationResolver;
 import ru.hzerr.fx.engine.logging.provider.ILogProvider;
 
 import java.io.Closeable;
 import java.io.IOException;
-import java.lang.reflect.Constructor;
-import java.lang.reflect.InvocationTargetException;
 import java.net.URL;
-import java.util.Arrays;
 import java.util.concurrent.CompletionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 /**
  * Класс EntityLoader отвечает за загрузку сущностей в приложение.
@@ -52,7 +54,7 @@ public class EntityLoader implements Closeable, IEntityLoader {
     private IClassLoaderProvider classLoaderProvider;
 
     public EntityLoader() {
-        Runtime.getRuntime().addShutdownHook(new Thread(service::shutdown));
+        Runtime.getRuntime().addShutdownHook(Thread.ofVirtual().unstarted(service::shutdown));
     }
 
     /**
@@ -97,29 +99,6 @@ public class EntityLoader implements Closeable, IEntityLoader {
 
     @Override
     public <C extends Controller, P extends Parent>
-    IExtendedCompletionStage<Entity<C, P>> loadAsync(LoadMetaData<C> loadData, Class<P> parent) {
-        return ExtendedCompletableFuture.supplyAsync((Handler<Entity<C, P>>) () -> load(loadData, parent), service);
-    }
-
-    /**
-     *
-     * @param loadData данные, для создания объекта контроллера через {@link Constructor#newInstance(Object...)}
-     * @param parent представляющий из себя тип узла
-     * @return загруженную сущность
-     * @param <C> тип контроллера
-     * @param <P> тип узла
-     * @throws LoadControllerException в случае ошибки загрузки контроллера
-     * @throws IOException в случае ошибки загрузки fxml
-     * @see #load(SpringLoadMetaData, Class)
-     */
-    @Override
-    public <C extends Controller, P extends Parent>
-    Entity<C, P> load(LoadMetaData<C> loadData, Class<P> parent) throws LoadControllerException, IOException {
-        return load(loadController(loadData), parent);
-    }
-
-    @Override
-    public <C extends Controller, P extends Parent>
     IExtendedCompletionStage<Entity<C, P>> loadAsync(C controller, Class<P> parent) {
         return ExtendedCompletableFuture.supplyAsync((Handler<Entity<C, P>>) () -> load(controller, parent), service);
     }
@@ -152,47 +131,18 @@ public class EntityLoader implements Closeable, IEntityLoader {
         throw new BeanControllerNotFoundException("Контроллер " + loadData.getControllerClass().getSimpleName() + " не найден");
     }
 
-    @NotNull
-    private <C extends Controller>
-    C loadController(@NotNull LoadMetaData<C> loadData) throws ProcessingConstructorException, ConstructorNotFoundException, LoadAbstractClassException {
-        Constructor<C> constructor;
-        boolean withArgs = loadData.getParameterTypes() != null;
-        if (withArgs) {
-            try {
-                constructor = loadData.getControllerClass().getDeclaredConstructor(loadData.getParameterTypes());
-            } catch (NoSuchMethodException e) {
-                String params = Arrays.stream(loadData.getParameterTypes()).map(Class::getName).collect(Collectors.joining(", "));
-                throw new ConstructorNotFoundException(String.format("Конструктор класса '%s' с необходимыми параметрами не найден. Переданные параметры конструктора: %s", loadData.getControllerClass().getName(), params), e);
-            }
-            constructor.setAccessible(true);
-            try {
-                return constructor.newInstance(loadData.getArguments());
-            } catch (InvocationTargetException e) {
-                String params = Arrays.stream(loadData.getParameterTypes()).map(Class::getName).collect(Collectors.joining(", "));
-                throw new ProcessingConstructorException(String.format("Произошла ошибка внутри конструктора класса '%s'. Переданные параметры конструктора: %s", loadData.getControllerClass().getName(), params), e);
-            } catch (InstantiationException e) {
-                throw new LoadAbstractClassException(String.format("Невозможно загрузить абстрактный класс '%s'", loadData.getControllerClass().getName()), e);
-            } catch (IllegalAccessException e) {
-                String params = Arrays.stream(loadData.getParameterTypes()).map(Class::getName).collect(Collectors.joining(", "));
-                throw new IllegalAccessControllerException(String.format("Конструктор класса '%s' по каким-то причинам недоступен. Переданные параметры конструктора: %s", loadData.getControllerClass().getName(), params), e);
-            }
-        } else {
-            try {
-                constructor = loadData.getControllerClass().getDeclaredConstructor();
-            } catch (NoSuchMethodException e) {
-                throw new ConstructorNotFoundException(String.format("Конструктор класса '%s' без параметров не найден", loadData.getControllerClass().getName()), e);
-            }
-            constructor.setAccessible(true);
-            try {
-                return constructor.newInstance();
-            } catch (InvocationTargetException e) {
-                throw new ProcessingConstructorException(String.format("Произошла ошибка внутри конструктора без параметров класса '%s'", loadData.getControllerClass().getName()), e);
-            } catch (InstantiationException e) {
-                throw new LoadAbstractClassException(String.format("Невозможно загрузить абстрактный класс '%s'", loadData.getControllerClass().getName()), e);
-            } catch (IllegalAccessException e) {
-                throw new IllegalAccessControllerException(String.format("Конструктор без параметров класса '%s' по каким-то причинам недоступен", loadData.getControllerClass().getName()), e);
-            }
-        }
+    @Override
+    public <C extends PopupController, P extends Parent>
+    IExtendedCompletionStage<Entity<C, P>> view(SpringLoadMetaData<C> loadData, Class<P> parent) {
+        return ExtendedCompletableFuture.supplyAsync((Handler<Entity<C, P>>) () -> view(loadController(loadData), parent), service);
+    }
+
+    @Override
+    public <C extends PopupController, P extends Parent>
+    Entity<C, P> view(C controller, Class<P> parent) throws IOException {
+        Entity<C, P> entity = load(controller, parent);
+        Platform.runLater(entity.getController()::view);
+        return entity;
     }
 
     @Override
